added scheduled subjects